  distinct thread binding.
- On thread creation, request internal memory on the fly instead of in
  advance. Depending on the measurement configuration this will save
  some memory.
- As Open MPI provides since version 3.0 a C++ compiler wrapper for
  SHMEM, Score-P will also provide a instrumentation wrapper
  `scorep-oshcxx` in this case.

Bugfixes:

- Instrumentation of Fortran OpenMP programs that use untied tasks
  failed with undefined references. Fixed.
- So far, programs that pthread_exit() the main thread crashed based
  on the requirement that the program's main thread is responsible for
  the measurement finalization. This requirement was removed.
- Since Score-P version 2.x, measurement initialization is done before
  entering 'main' using compiler-provided constructor functions, if
  available. As a consequence, MPI- or SHMEM-only instrumented
  programs lacked the artificial 'PARALLEL' region that was used to
  enclose all following regions. Instead of the 'PARALLEL' region
  Score-P now generates program-begin and program-end events that
  enclose the entire application. If program arguments are given,
  these are recorded as well. In tracing mode program-begin/end are
  mapped to ProgramBegin/End event records; in profiling mode this
  feature is modeled as enter/exit of an additional region with the
  name of the executable, if available.

------------------- Released version 4.1 -----------------------------

Bugfixes:

- scorep-score: fixed potentially wrong output of SCOREP_TOTAL_MEMORY
  which was caused by an uninitialized variable.
- Improve robustness of wrapping memory-related function calls
  during link-time.
- Fixed PGI compiler adapter to prevent the corruption of register
  values in some cases.
- Fixed calculation of memory statistics in out-of-memory condition.
- Honor --libdir and --dis|enable-shared|static when building and
  installing libscorep_estimator.

------------------- Released version 4.0 -----------------------------
